@@ -1,3 +1,8 @@
+2009-10-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* ucm.el (ucm-actb-checkin-command, ucm-checkin-activity): don't
+	use `with-current-buffer' when extracting the checkin comment
+
 2009-09-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (clearcase-file-fprop): 445 find the FPROP in
